src/parser/gen/CELParser.ts
// @ts-nocheck
// Generated from /Users/s26057/workspace/projects/cel-ts/src/parser/gen/CEL.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import CELVisitor from "./CELVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class CELParser extends Parser {
	public static readonly EQUALS = 1;
	public static readonly NOT_EQUALS = 2;
	public static readonly IN = 3;
	public static readonly LESS = 4;
	public static readonly LESS_EQUALS = 5;
	public static readonly GREATER_EQUALS = 6;
	public static readonly GREATER = 7;
	public static readonly LOGICAL_AND = 8;
	public static readonly LOGICAL_OR = 9;
	public static readonly LBRACKET = 10;
	public static readonly RPRACKET = 11;
	public static readonly LBRACE = 12;
	public static readonly RBRACE = 13;
	public static readonly LPAREN = 14;
	public static readonly RPAREN = 15;
	public static readonly DOT = 16;
	public static readonly COMMA = 17;
	public static readonly MINUS = 18;
	public static readonly EXCLAM = 19;
	public static readonly QUESTIONMARK = 20;
	public static readonly COLON = 21;
	public static readonly PLUS = 22;
	public static readonly STAR = 23;
	public static readonly SLASH = 24;
	public static readonly PERCENT = 25;
	public static readonly CEL_TRUE = 26;
	public static readonly CEL_FALSE = 27;
	public static readonly NUL = 28;
	public static readonly WHITESPACE = 29;
	public static readonly COMMENT = 30;
	public static readonly NUM_FLOAT = 31;
	public static readonly NUM_INT = 32;
	public static readonly NUM_UINT = 33;
	public static readonly STRING = 34;
	public static readonly BYTES = 35;
	public static readonly IDENTIFIER = 36;
	public static readonly ESC_IDENTIFIER = 37;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_start = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_conditionalOr = 2;
	public static readonly RULE_conditionalAnd = 3;
	public static readonly RULE_relation = 4;
	public static readonly RULE_calc = 5;
	public static readonly RULE_unary = 6;
	public static readonly RULE_member = 7;
	public static readonly RULE_primary = 8;
	public static readonly RULE_exprList = 9;
	public static readonly RULE_listInit = 10;
	public static readonly RULE_fieldInitializerList = 11;
	public static readonly RULE_optField = 12;
	public static readonly RULE_mapInitializerList = 13;
	public static readonly RULE_escapeIdent = 14;
	public static readonly RULE_optExpr = 15;
	public static readonly RULE_literal = 16;
	public static readonly literalNames: (string | null)[] = [ null, "'=='", 
                                                            "'!='", "'in'", 
                                                            "'<'", "'<='", 
                                                            "'>='", "'>'", 
                                                            "'&&'", "'||'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'('", "')'", 
                                                            "'.'", "','", 
                                                            "'-'", "'!'", 
                                                            "'?'", "':'", 
                                                            "'+'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'true'", "'false'", 
                                                            "'null'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "EQUALS", 
                                                             "NOT_EQUALS", 
                                                             "IN", "LESS", 
                                                             "LESS_EQUALS", 
                                                             "GREATER_EQUALS", 
                                                             "GREATER", 
                                                             "LOGICAL_AND", 
                                                             "LOGICAL_OR", 
                                                             "LBRACKET", 
                                                             "RPRACKET", 
                                                             "LBRACE", "RBRACE", 
                                                             "LPAREN", "RPAREN", 
                                                             "DOT", "COMMA", 
                                                             "MINUS", "EXCLAM", 
                                                             "QUESTIONMARK", 
                                                             "COLON", "PLUS", 
                                                             "STAR", "SLASH", 
                                                             "PERCENT", 
                                                             "CEL_TRUE", 
                                                             "CEL_FALSE", 
                                                             "NUL", "WHITESPACE", 
                                                             "COMMENT", 
                                                             "NUM_FLOAT", 
                                                             "NUM_INT", 
                                                             "NUM_UINT", 
                                                             "STRING", "BYTES", 
                                                             "IDENTIFIER", 
                                                             "ESC_IDENTIFIER" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "expr", "conditionalOr", "conditionalAnd", "relation", "calc", 
		"unary", "member", "primary", "exprList", "listInit", "fieldInitializerList", 
		"optField", "mapInitializerList", "escapeIdent", "optExpr", "literal",
	];
	public get grammarFileName(): string { return "CEL.g4"; }
	public get literalNames(): (string | null)[] { return CELParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return CELParser.symbolicNames; }
	public get ruleNames(): string[] { return CELParser.ruleNames; }
	public get serializedATN(): number[] { return CELParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, CELParser._ATN, CELParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let localctx: StartContext = new StartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, CELParser.RULE_start);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 34;
			localctx._e = this.expr();
			this.state = 35;
			this.match(CELParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, CELParser.RULE_expr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			localctx._e = this.conditionalOr();
			this.state = 43;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 38;
				localctx._op = this.match(CELParser.QUESTIONMARK);
				this.state = 39;
				localctx._e1 = this.conditionalOr();
				this.state = 40;
				this.match(CELParser.COLON);
				this.state = 41;
				localctx._e2 = this.expr();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditionalOr(): ConditionalOrContext {
		let localctx: ConditionalOrContext = new ConditionalOrContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, CELParser.RULE_conditionalOr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 45;
			localctx._e = this.conditionalAnd();
			this.state = 50;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===9) {
				{
				{
				this.state = 46;
				localctx._s9 = this.match(CELParser.LOGICAL_OR);
				localctx._ops.push(localctx._s9);
				this.state = 47;
				localctx._conditionalAnd = this.conditionalAnd();
				localctx._e1.push(localctx._conditionalAnd);
				}
				}
				this.state = 52;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditionalAnd(): ConditionalAndContext {
		let localctx: ConditionalAndContext = new ConditionalAndContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, CELParser.RULE_conditionalAnd);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 53;
			localctx._e = this.relation(0);
			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 54;
				localctx._s8 = this.match(CELParser.LOGICAL_AND);
				localctx._ops.push(localctx._s8);
				this.state = 55;
				localctx._relation = this.relation(0);
				localctx._e1.push(localctx._relation);
				}
				}
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public relation(): RelationContext;
	public relation(_p: number): RelationContext;
	// @RuleVersion(0)
	public relation(_p?: number): RelationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: RelationContext = new RelationContext(this, this._ctx, _parentState);
		let _prevctx: RelationContext = localctx;
		let _startState: number = 8;
		this.enterRecursionRule(localctx, 8, CELParser.RULE_relation, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 62;
			this.calc(0);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 69;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new RelationContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_relation);
					this.state = 64;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 65;
					localctx._op = this._input.LT(1);
					_la = this._input.LA(1);
					if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 254) !== 0))) {
					    localctx._op = this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 66;
					this.relation(2);
					}
					}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public calc(): CalcContext;
	public calc(_p: number): CalcContext;
	// @RuleVersion(0)
	public calc(_p?: number): CalcContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: CalcContext = new CalcContext(this, this._ctx, _parentState);
		let _prevctx: CalcContext = localctx;
		let _startState: number = 10;
		this.enterRecursionRule(localctx, 10, CELParser.RULE_calc, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 73;
			this.unary();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 83;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 81;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
					case 1:
						{
						localctx = new CalcContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_calc);
						this.state = 75;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 76;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 58720256) !== 0))) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 77;
						this.calc(3);
						}
						break;
					case 2:
						{
						localctx = new CalcContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_calc);
						this.state = 78;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 79;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===18 || _la===22)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 80;
						this.calc(2);
						}
						break;
					}
					}
				}
				this.state = 85;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unary(): UnaryContext {
		let localctx: UnaryContext = new UnaryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, CELParser.RULE_unary);
		let _la: number;
		try {
			let _alt: number;
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				localctx = new MemberExprContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 86;
				this.member(0);
				}
				break;
			case 2:
				localctx = new LogicalNotContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 87;
					(localctx as LogicalNotContext)._s19 = this.match(CELParser.EXCLAM);
					(localctx as LogicalNotContext)._ops.push((localctx as LogicalNotContext)._s19);
					}
					}
					this.state = 90;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===19);
				this.state = 92;
				this.member(0);
				}
				break;
			case 3:
				localctx = new NegateContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 94;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 93;
						(localctx as NegateContext)._s18 = this.match(CELParser.MINUS);
						(localctx as NegateContext)._ops.push((localctx as NegateContext)._s18);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 96;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				this.state = 98;
				this.member(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public member(): MemberContext;
	public member(_p: number): MemberContext;
	// @RuleVersion(0)
	public member(_p?: number): MemberContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: MemberContext = new MemberContext(this, this._ctx, _parentState);
		let _prevctx: MemberContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, CELParser.RULE_member, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			localctx = new PrimaryExprContext(this, localctx);
			this._ctx = localctx;
			_prevctx = localctx;

			this.state = 102;
			this.primary();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 128;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 126;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
					case 1:
						{
						localctx = new SelectContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 104;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 105;
						(localctx as SelectContext)._op = this.match(CELParser.DOT);
						this.state = 107;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la===20) {
							{
							this.state = 106;
							(localctx as SelectContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 109;
						(localctx as SelectContext)._id = this.escapeIdent();
						}
						break;
					case 2:
						{
						localctx = new MemberCallContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 110;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 111;
						(localctx as MemberCallContext)._op = this.match(CELParser.DOT);
						this.state = 112;
						(localctx as MemberCallContext)._id = this.match(CELParser.IDENTIFIER);
						this.state = 113;
						(localctx as MemberCallContext)._open = this.match(CELParser.LPAREN);
						this.state = 115;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132580181) !== 0)) {
							{
							this.state = 114;
							(localctx as MemberCallContext)._args = this.exprList();
							}
						}

						this.state = 117;
						this.match(CELParser.RPAREN);
						}
						break;
					case 3:
						{
						localctx = new IndexContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 118;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 119;
						(localctx as IndexContext)._op = this.match(CELParser.LBRACKET);
						this.state = 121;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la===20) {
							{
							this.state = 120;
							(localctx as IndexContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 123;
						(localctx as IndexContext)._index = this.expr();
						this.state = 124;
						this.match(CELParser.RPRACKET);
						}
						break;
					}
					}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public primary(): PrimaryContext {
		let localctx: PrimaryContext = new PrimaryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, CELParser.RULE_primary);
		let _la: number;
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				localctx = new IdentContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 131;
					(localctx as IdentContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 134;
				(localctx as IdentContext)._id = this.match(CELParser.IDENTIFIER);
				}
				break;
			case 2:
				localctx = new GlobalCallContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 135;
					(localctx as GlobalCallContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 138;
				(localctx as GlobalCallContext)._id = this.match(CELParser.IDENTIFIER);
				{
				this.state = 139;
				(localctx as GlobalCallContext)._op = this.match(CELParser.LPAREN);
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132580181) !== 0)) {
					{
					this.state = 140;
					(localctx as GlobalCallContext)._args = this.exprList();
					}
				}

				this.state = 143;
				this.match(CELParser.RPAREN);
				}
				}
				break;
			case 3:
				localctx = new NestedContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 144;
				this.match(CELParser.LPAREN);
				this.state = 145;
				(localctx as NestedContext)._e = this.expr();
				this.state = 146;
				this.match(CELParser.RPAREN);
				}
				break;
			case 4:
				localctx = new CreateListContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 148;
				(localctx as CreateListContext)._op = this.match(CELParser.LBRACKET);
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132581205) !== 0)) {
					{
					this.state = 149;
					(localctx as CreateListContext)._elems = this.listInit();
					}
				}

				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17) {
					{
					this.state = 152;
					this.match(CELParser.COMMA);
					}
				}

				this.state = 155;
				this.match(CELParser.RPRACKET);
				}
				break;
			case 5:
				localctx = new CreateStructContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 156;
				(localctx as CreateStructContext)._op = this.match(CELParser.LBRACE);
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132581205) !== 0)) {
					{
					this.state = 157;
					(localctx as CreateStructContext)._entries = this.mapInitializerList();
					}
				}

				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17) {
					{
					this.state = 160;
					this.match(CELParser.COMMA);
					}
				}

				this.state = 163;
				this.match(CELParser.RBRACE);
				}
				break;
			case 6:
				localctx = new CreateMessageContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 164;
					(localctx as CreateMessageContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 167;
				(localctx as CreateMessageContext)._IDENTIFIER = this.match(CELParser.IDENTIFIER);
				(localctx as CreateMessageContext)._ids.push((localctx as CreateMessageContext)._IDENTIFIER);
				this.state = 172;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===16) {
					{
					{
					this.state = 168;
					(localctx as CreateMessageContext)._s16 = this.match(CELParser.DOT);
					(localctx as CreateMessageContext)._ops.push((localctx as CreateMessageContext)._s16);
					this.state = 169;
					(localctx as CreateMessageContext)._IDENTIFIER = this.match(CELParser.IDENTIFIER);
					(localctx as CreateMessageContext)._ids.push((localctx as CreateMessageContext)._IDENTIFIER);
					}
					}
					this.state = 174;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 175;
				(localctx as CreateMessageContext)._op = this.match(CELParser.LBRACE);
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 20)) & ~0x1F) === 0 && ((1 << (_la - 20)) & 196609) !== 0)) {
					{
					this.state = 176;
					(localctx as CreateMessageContext)._entries = this.fieldInitializerList();
					}
				}
